--- a/healthWebApp/package.json
+++ b/healthWebApp/package.json
@@ -15,6 +15,7 @@
     "antd": "^5.15.2",
     "axios": "^1.6.7",
     "firebase": "^10.8.1",
+    "openai": "^4.29.2",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
